--- a/css/estilos.css
+++ b/css/estilos.css
@@ -13,7 +13,7 @@ width: 483px;
 height: 540px;
 left: 589px;
 top: 270px;
-background: url(../IMG/imageuno.png);
+background: url(../img/imageuno.png);
 }
 #BT1{
     
